--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-success {
+  background-color: #e1faea;
+}
+.bg-alert {
+  background-color: #f7e4e1;
+}
+
